# tidysdmx

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md  feature_request.md  tasks.md
docs/: Makefile  conf.py  example.ipynb  make.bat
notebooks/fmr/: fetch_schema.ipynb
notebooks/github_api/: experiment_github_api.ipynb
notebooks/tidysdmx/: step1-pipeline-iterative-development-wb-template.ipynb  step1-pipeline-iterative-development.ipynb
notebooks/tidysdmx/data/: ifpri_asti_raw.csv
notebooks/utils/: master_mapping_wb_shp.json  transform_source_to_target.ipynb  wb_shp_bronze.csv
scripts/: debug-config-checks.py
src/tidysdmx/: __init__.py  api.py  kedro.py  mapping.py  qa_utils.py  structures.py  structures_temp.py  tidy_raw.py  tidysdmx.py  tidysdmx2.py  utils.py  validation.py  wbutils.py
tests/: conftest.py  test_kedro.py  test_mapping.py  test_structures.py  test_structures_temp.py  test_tidy_raw.py  test_tidysdmx.py  test_utils.py  test_validation.py
tests/fixtures/: dummy_data.py  fmr_api.py  fxtr_mapping.py  fxtr_schemas.py  fxtr_structures.py  schemas.py
tests/fixtures/cassettes/: dsd_schema.pkl
tests/fixtures/data/: ifpri_asti_sample.csv  sample_df.csv  sdmx_df.csv  wb_mapping_template.xlsx
