[tool.poetry]
name = "tidysdmx"
version = "0.1.0"
description = "A toolbox to work with SDMX data"
authors = ["Tony Fujs"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
