[tool.poetry]
name = "tidysdmx"
version = "0.1.0"
description = "A toolbox to work with SDMX data"
authors = ["Tony Fujs"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
pysdmx = "^1.2.2"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
